fix: Adjust z-index for filtrosBlurTop to improve layering

--- a/src/app/discover/discover.module.css
+++ b/src/app/discover/discover.module.css
@@ -154,7 +154,7 @@
     width: 99%;
     height: 150px; /* Más alto para un difuminado suave */
     pointer-events: none;
-    z-index: 10;
+    z-index: 4;
     background: linear-gradient(
         to bottom,
         rgba(0, 0, 0, 0.98) 0%,
